<resources>
    <string name="app_name">Black-Horse-Onboarding</string>
    <string name="linear_layout_button_1">button 1</string>
    <string name="linear_layout_button_2">button 2</string>
    <string name="linear_layout_button_3">button 3</string>
    <string name="linear_layout_button">button %d</string>
    <string name="practice_title">Android practice</string>
    <string name="hello">Hello!</string>
    <string name="image_view" translatable="false">Image View</string>
    <string name="register">Signup</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
    <string name="facebook_login" translatable="false">login with facebook</string>
    <string name="twitter_login" translatable="false">login with twitter</string>
    <string name="choose_contacts">Choose contacts</string>
    <string name="dialog">dialog</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="java">Java</string>
    <string name="android">Android</string>
    <string name="android_article">Android是一个移动端操作系统，可以使用Java和Kotlin语言进行开发</string>
    <string name="java_article">一个新的Fragment</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="list_header">This is a header</string>
    <string name="counter_button_text">Number:</string>
    <string name="save_to_sp">Save to SP</string>
    <string name="launch_new_activity">launch Activity</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="submit">submit</string>
    <string name="name_invalid_error">Name length should not longer than 8 characters</string>
    <string name="gender_invalid_error">Gender should be 0 or 1</string>
    <string name="age_invalid_error">Age should larger than 0 and smaller than 100</string>
    <string name="empty_error">Should not be empty</string>
    <string name="retrofit">retrofit</string>
    <string name="clear_button_text">Clear</string>
    <string name="increase">Increase</string>
    <string name="zero">0</string>
</resources>