<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        android:layout_marginStart="113.1dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="113.1dp"
        android:layout_marginBottom="548.7dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/fill_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="77.7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:fontFamily="regular"
            android:hint="@string/username_hint"
            android:textColor="@color/input_edit_text_text_color"
            android:textSize="@dimen/login_activity_font_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_edit_text"
            android:fontFamily="regular"
            android:hint="@string/password_hint"
            android:textColor="@color/input_edit_text_text_color"
            android:textSize="@dimen/login_activity_font_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="22.5dp"
        android:layout_marginEnd="135.5dp"
        android:fontFamily="regular"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
        app:layout_constraintStart_toStartOf="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37.5dp"
        android:text="@string/forgot_password"
        android:textColor="#222222"
        android:textSize="@dimen/login_activity_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="@+id/checkbox" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22.5dp"
        android:text="@string/login"
        android:background="@drawable/round_button_login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
        app:layout_constraintStart_toStartOf="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <TextView
        android:id="@+id/or_connect_with_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26.5dp"
        android:text="@string/or_connect_with"
        android:fontFamily="regular"
        android:textColor="#b2b2b2"
        android:textSize="@dimen/login_activity_font_size"
        app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
        app:layout_constraintStart_toStartOf="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/facebook_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="29.5dp"
        android:contentDescription="@string/facebook_login"
        android:src="@drawable/fb"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/or_connect_with_text_view" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/twitter_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="29.5dp"
        android:contentDescription="@string/twitter_login"
        android:src="@drawable/tw"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/or_connect_with_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44.5dp"
        android:text="@string/sign_up_with_e_mail"
        android:textAllCaps="false"
        android:textColor="#1f4ba5"
        android:background="@drawable/round_button_sign_up"
        android:textSize="@dimen/login_activity_font_size"
        android:fontFamily="regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>